Bug 1145730 - Restrict the async transforms applied to mask layers to those caused by fixed-position adjustment. r=kats